<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="Ayo Mulai Membaca!"
        android:textColor="@color/nero"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/mainJudul"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

<!-- MAMALIA -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mamalia"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_gravity="center"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/pinksoft"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp">

            <ImageView
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp"
                android:src="@drawable/mamalias"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/mamalia"
                android:textColor="@color/nero"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/contohmamalia"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.royrodriguez.transitionbutton.TransitionButton
                android:id="@+id/startMamalia"
                android:layout_width="100dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                app:defaultColor="@color/nero"
                android:padding="10dp"
                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
                android:text="Mulai"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                app:backgroundTint="@color/nero"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                 />

        </androidx.constraintlayout.widget.ConstraintLayout>


<!-- AVES -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/aves"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/toska"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="116dp"
                android:layout_marginStart="124dp"
                android:layout_marginLeft="124dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/aves"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/aves"
                android:textColor="@color/nero"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/contohaves"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <com.royrodriguez.transitionbutton.TransitionButton
                android:id="@+id/startAves"
                android:layout_width="100dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                app:defaultColor="@color/nero"
                android:padding="10dp"
                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
                android:text="Mulai"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                app:backgroundTint="@color/nero"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


<!-- PISCES -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pisces"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/yellowsoft"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="116dp"
                android:layout_marginStart="92dp"
                android:layout_marginLeft="92dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/pisces"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/pisces"
                android:textColor="@color/nero"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/contohpisces"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <com.royrodriguez.transitionbutton.TransitionButton
                android:id="@+id/startPisces"
                android:layout_width="100dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                app:defaultColor="@color/nero"
                android:padding="10dp"
                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
                android:text="Mulai"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                app:backgroundTint="@color/nero"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

<!-- AMPHIBI -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/amphibi"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/softblue"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="116dp"
                android:layout_marginStart="96dp"
                android:layout_marginLeft="96dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/amfibi"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/amfibi"
                android:textColor="@color/nero"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/contohamfibi"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <com.royrodriguez.transitionbutton.TransitionButton
                android:id="@+id/startAmphibi"
                android:layout_width="100dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                app:defaultColor="@color/nero"
                android:padding="10dp"
                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
                android:text="Mulai"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                app:backgroundTint="@color/nero"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

<!-- REPTIL -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/reptil"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/softcoklat"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="116dp"
                android:layout_marginStart="96dp"
                android:layout_marginLeft="96dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/reptil"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/reptil"
                android:textColor="@color/nero"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/contohreptil"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <com.royrodriguez.transitionbutton.TransitionButton
                android:id="@+id/startReptil"
                android:layout_width="100dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                app:defaultColor="@color/nero"
                android:padding="10dp"
                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
                android:text="Mulai"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                app:backgroundTint="@color/nero"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>